tests/compile-fail/integration__integration__std_features__renamed_layer_conflict.snap
---
source: tests/integration/std_features.rs
expression: stderr
---
error: cannot supply both 'unknown' and 'layer'
   ┌─ <input>:9:13
   │
 9 │             unknown: 3,
   │             ^^^^^^^ conflicting field
10 │             layer: 4,
   │             ^^^^^ conflicting field


